# afl.rs

./: .fdignore  .gitignore  .gitmodules  .rgignore  .travis.yml  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  README.md  Vagrantfile  build.rs  clippy.toml  guide.html  index.html  introduction.html  print.html  reproduce-issue.sh  setup.html  tutorial.html
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml  update_aflplusplus.yml
afl/: Cargo.toml  build.rs  etc
afl-2.52b/: afl-analyze  afl-as  afl-clang  afl-fuzz  afl-gcc  afl-gotcpu  afl-showmap  afl-tmin  as
afl-2.52b/afl-analyze.dSYM/Contents/: Info.plist
afl-2.52b/afl-analyze.dSYM/Contents/Resources/DWARF/: afl-analyze
afl-2.52b/afl-as.dSYM/Contents/Resources/DWARF/: afl-as
afl-2.52b/afl-fuzz.dSYM/Contents/Resources/DWARF/: afl-fuzz
afl-2.52b/afl-gcc.dSYM/Contents/Resources/DWARF/: afl-gcc
afl-2.52b/afl-gotcpu.dSYM/Contents/: Info.plist
afl-2.52b/afl-gotcpu.dSYM/Contents/Resources/DWARF/: afl-gotcpu
afl-2.52b/afl-showmap.dSYM/Contents/: Info.plist
afl-2.52b/afl-showmap.dSYM/Contents/Resources/DWARF/: afl-showmap
afl-2.52b/afl-tmin.dSYM/Contents/Resources/DWARF/: afl-tmin
afl-2.52b/llvm_mode/: afl-llvm-pass.so.cc
afl-2.52b/test-instr.dSYM/Contents/Resources/DWARF/: test-instr
afl-plugin/: Cargo.toml  afl-llvm-pass.so.cc  build.rs  config.h  lib.rs
afl-sys/: Cargo.toml  build.rs  fuzz.rs  lib.rs
afl-sys/afl-2.10b/: Makefile  afl-analyze.c  afl-as.c  afl-as.h  afl-cmin  afl-fuzz.c  afl-gcc.c  afl-gotcpu.c  afl-showmap.c  afl-tmin.c  afl-whatsup  config.h  hash.h
afl-sys/afl-2.10b/docs/: ChangeLog  INSTALL  README  env_variables.txt  perf_tips.txt  sister_projects.txt  status_screen.txt
afl-sys/afl-2.10b/experimental/: README.experiments
afl-sys/afl-2.10b/experimental/distributed_fuzzing/: sync_script.sh
afl-sys/afl-2.10b/experimental/instrumented_cmp/: instrumented_cmp.c
afl-sys/afl-2.10b/experimental/post_library/: post_library.so.c  post_library_png.so.c
afl-sys/afl-2.10b/llvm_mode/: Makefile  README.llvm  afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
afl-sys/afl-2.10b/qemu_mode/patches/: cpu-exec.diff
afl-sys/afl-2.27b/: Makefile  afl-fuzz.c  afl-gcc.c  config.h
afl-sys/afl-2.27b/docs/: ChangeLog  INSTALL  QuickStartGuide.txt  README  env_variables.txt  notes_for_asan.txt  parallel_fuzzing.txt  status_screen.txt  technical_details.txt
afl-sys/afl-2.27b/experimental/crash_triage/: triage_crashes.sh
afl-sys/afl-2.27b/libdislocator/: Makefile  libdislocator.so.c
afl-sys/afl-2.27b/libtokencap/: Makefile  README.tokencap  libtokencap.so.c
afl-sys/afl-2.27b/llvm_mode/: README.llvm  afl-clang-fast.c  afl-llvm-rt.o.c
afl-sys/afl-2.27b/qemu_mode/patches/: afl-qemu-cpu-inl.h
afl-sys/afl-2.34b/: Makefile  afl-analyze.c  afl-fuzz.c  afl-gcc.c  afl-latest.tgz  afl-showmap.c  afl-tmin.c  afl-whatsup  config.h  types.h
afl-sys/afl-2.34b/docs/: ChangeLog  INSTALL  README  env_variables.txt  notes_for_asan.txt  perf_tips.txt  sister_projects.txt  status_screen.txt
afl-sys/afl-2.34b/libdislocator/: libdislocator.so.c
afl-sys/afl-2.34b/libtokencap/: README.tokencap
afl-sys/afl-2.34b/llvm_mode/: afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
afl-sys/afl-2.34b/qemu_mode/: README.qemu  build_qemu_support.sh
afl-sys/afl-2.52b/: afl-analyze  afl-as  afl-fuzz  afl-gcc  afl-gotcpu  afl-showmap  afl-tmin
afl-sys/afl-2.52b/afl-analyze.dSYM/Contents/Resources/DWARF/: afl-analyze
afl-sys/afl-2.52b/afl-as.dSYM/Contents/: Info.plist
afl-sys/afl-2.52b/afl-as.dSYM/Contents/Resources/DWARF/: afl-as
afl-sys/afl-2.52b/afl-fuzz.dSYM/Contents/: Info.plist
afl-sys/afl-2.52b/afl-fuzz.dSYM/Contents/Resources/DWARF/: afl-fuzz
afl-sys/afl-2.52b/afl-gcc.dSYM/Contents/: Info.plist
afl-sys/afl-2.52b/afl-gcc.dSYM/Contents/Resources/DWARF/: afl-gcc
afl-sys/afl-2.52b/afl-gotcpu.dSYM/Contents/Resources/DWARF/: afl-gotcpu
afl-sys/afl-2.52b/afl-showmap.dSYM/Contents/Resources/DWARF/: afl-showmap
afl-sys/afl-2.52b/afl-tmin.dSYM/Contents/: Info.plist
afl-sys/afl-2.52b/afl-tmin.dSYM/Contents/Resources/DWARF/: afl-tmin
afl-sys/afl-2.52b/test-instr.dSYM/Contents/: Info.plist
afl-sys/afl-2.52b/test-instr.dSYM/Contents/Resources/DWARF/: test-instr
afl/crate-tests/jpeg-decoder/: CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
afl/crate-tests/jpeg-decoder/examples/: decode.rs
afl/crate-tests/jpeg-decoder/src/: decoder.rs  error.rs  huffman.rs  idct.rs  lib.rs  main.rs  marker.rs  parser.rs  resampler.rs  worker_thread.rs
afl/crate-tests/jpeg-decoder/tests/: lib.rs
afl/crate-tests/jpeg-decoder/tests/common/: mod.rs
afl/crate-tests/jpeg-decoder/tests/crashtest/: mod.rs
afl/crate-tests/jpeg-decoder/tests/crashtest/images/: README.md
afl/crate-tests/jpeg-decoder/tests/reftest/: .gitignore  mod.rs
afl/crate-tests/jpeg-decoder/tests/reftest/images/: README.md  disabled.list
afl/crate-tests/jpeg-decoder/tests/reftest/images/mozilla/: README.md
afl/examples/: cfg.rs  cmplog.rs  hello.rs  integer-overflow.rs  maze.rs  oncelock_bad.rs  reset_demo.rs
afl/examples/inputs/integer-overflow/: 2
afl/src/: common.rs  config.h  lib.rs
cargo-afl/: AFLplusplus  Cargo.toml  build.rs
cargo-afl-common/: Cargo.toml  build.rs
cargo-afl-common/src/: config.rs  lib.rs
cargo-afl/src/: common.rs  config.rs  fuzz.rs  main.rs
cargo-afl/src/common/: mod.rs
cargo-afl/tests/: clap.rs  crates_io.rs  fuzz_test.rs  install.rs  integration.rs  update.rs
ci/: Dockerfile  install-osx.sh  run.sh
docs/src/: SUMMARY.md  guide.md  introduction.md  setup.md  tutorial.md
etc/: Vagrantfile
examples/: arbitrary.rs  cmplog.rs  deferred-init.rs  hello.rs  integer-overflow.rs  panic.rs
examples/inputs/integer-overflow/: 1
plugin/: Cargo.toml  build.bash  build.rs
plugin/src/: afl-llvm-pass.so.cc  afl_cov.cc  config.h  lib.rs
scripts/: publish.sh
src/: afl-llvm-rt.o.c  afl_cov_rt.c  common.rs  config.h  dirs.rs  lib.rs
vagrant/: README.md  Vagrantfile
