[package]
name = "afl"
version = "0.12.4"
readme = "README.md"
license = "Apache-2.0"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>",
           "Corey Farwell <coreyf@rwell.org>"]
description = "Fuzzing Rust code with american-fuzzy-lop"
repository = "https://github.com/rust-fuzz/afl.rs"
homepage = "https://github.com/rust-fuzz/afl.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.4"
xdg = "2.4"

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
lazy_static = { version = "1.4.0", optional = true }
libc = "0.2.131"
rustc_version = "0.4"
xdg = "2.4"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"

[features]
reset_lazy_static = ["lazy_static"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
