[workspace]
members = ["afl", "cargo-afl"]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
# smoelius: Temporarily setting the lint level to `allow`.
# level = "deny"
level = "allow"
check-cfg = ["cfg(fuzzing)"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
disallowed-macros = "allow"
missing-panics-doc = "allow"
