[package]
name = "afl-plugin"
version = "0.1.4"
license = "Apache-2.0"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>",
           "Corey Farwell <coreyf@rwell.org>"]
build = "build.rs"
repository = "https://github.com/frewsxcv/afl.rs"
description = "LLVM instrumentation compiler plugin for afl.rs"

[lib]
name = "afl_plugin"
plugin = true
path = "lib.rs"

[build-dependencies]
gcc = "0.3"
quale = "1.0"
