[package]
name = "afl-sys"
version = "0.1.4"
authors = ["Corey Farwell <coreyf@rwell.org>"]
build = "build.rs"
repository = "https://github.com/frewsxcv/afl.rs"
homepage = "https://github.com/frewsxcv/afl.rs"
license = "Apache-2.0"
description = "Wrapper around AFL source"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
