[package]
name = "afl"
version = "0.13.2"
readme = "../README.md"
license = "Apache-2.0"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>",
           "Corey Farwell <coreyf@rwell.org>"]
description = "Fuzzing Rust code with american-fuzzy-lop"
repository = "https://github.com/rust-fuzz/afl.rs"
homepage = "https://github.com/rust-fuzz/afl.rs"
edition = "2021"

[build-dependencies]
fs_extra = "1.3"
home = "0.5"
libc = "0.2"
rustc_version = "0.4"
tempfile = "3.6"
xdg = "2.4"

[dependencies]
clap = { version = "4.3", features = ["cargo"] }
lazy_static = { version = "1.4", optional = true }
libc = "0.2"
rustc_version = "0.4"
xdg = "2.4"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
assert_cmd = "2.0"
tempfile = "3.6"

[features]
reset_lazy_static = ["lazy_static"]
no_cfg_fuzzing = []
