[package]
name = "cargo-afl"
version = "0.15.5"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Keegan McAllister <mcallister.keegan@gmail.com>",
    "Corey Farwell <coreyf@rwell.org>",
    "Samuel Moelius <sam@moeli.us>",
]
description = "Fuzzing Rust code with american-fuzzy-lop"
repository = "https://github.com/rust-fuzz/afl.rs"
homepage = "https://github.com/rust-fuzz/afl.rs"
edition = "2021"

[build-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
fs_extra = "1.3"
home = "0.5"
libc = "0.2"
rustc_version = "0.4"
tempfile = "3.10"
xdg = "2.5"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
fs_extra = "1.3"
home = "0.5"
libc = "0.2"
rustc_version = "0.4"
tempfile = "3.10"
xdg = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2"
predicates = "3.1"
tempfile = "3.10"

[features]
default = []
plugins = []

[lints]
workspace = true
