[package]
name = "cargo-afl"
version = "0.16.0"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Keegan McAllister <mcallister.keegan@gmail.com>",
    "Corey Farwell <coreyf@rwell.org>",
    "Samuel Moelius <sam@moeli.us>",
]
description = "Fuzzing Rust code with american-fuzzy-lop"
repository = "https://github.com/rust-fuzz/afl.rs"
homepage = "https://github.com/rust-fuzz/afl.rs"
edition = "2024"
exclude = ["etc"]

[build-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
home = "0.5"
rustc_version = "0.4"
tempfile = "3.23"
xdg = "3.0"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
home = "0.5"
rustc_version = "0.4"
tempfile = "3.23"
xdg = "3.0"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.5"
predicates = "3.1"
tempfile = "3.23"

[features]
default = []
plugins = []

[lints]
workspace = true
